--- a/views/index.html.twig
+++ b/views/index.html.twig
@@ -7,7 +7,32 @@
 <body>
 	<h1>Welcome to To Do List</h1>
 
-	<p><a href="/categories">Click here</a> to see all the catagories and add a category</p>
-	<p><a href="/tasks">Click here</a> to see all the tasks and to add a task</p>
+	<p>Create a new category:</p>
+
+	<form action="/categories" method="post">
+		<label for="name">Category name:</label>
+		<input id="name" name="name" type="text">
+
+		<button type="submit">Add category</button>
+	</form>
+	<form action="/delete_categories" method="post">
+		<button type="submit">Clear</button>
+	</form>
+
+	{% if categories is not empty %}
+	    <p>Here are all your categories:</p>
+		<ul>
+			{% for category in categories %}
+			    <li><a href="/categories/{{ category.getId }}">{{ category.getName }}</a></li>
+
+			{% endfor %}
+
+		</ul>
+	{% else %}
+	  <p>There are no categories yet!</p>
+	{% endif %}
+
+	<!-- <p><a href="/categories">Click here</a> to see all the catagories and add a category</p>
+	<p><a href="/tasks">Click here</a> to see all the tasks and to add a task</p> -->
 </body>
 </html>
