Try to add due date *BROKEN*

--- a/views/tasks.html.twig
+++ b/views/tasks.html.twig
@@ -8,7 +8,7 @@
     <p>Here are all your tasks:</p>
     <ul>
       {% for task in tasks %}
-        <li>{{ task.getDescription }}</li>
+        <li>{{ task.getDescription}}</li>
       {% endfor %}
     </ul>
     {% endif %}
@@ -16,6 +16,9 @@
     <form action='/tasks' method='post'>
       <label for='description'>Task Description</label>
       <input id='description' name='description' type='text'>
+
+      <label for="due_date">Due Date(YYYY-MM-DD):</label>
+      <input id="due_date" name="due_date" type="text">
 
       <button type='submit'>Add task</button>
     </form>
