--- a/views/category.html.twig
+++ b/views/category.html.twig
@@ -14,6 +14,7 @@
             </ul>
         {% endif %}
 
+        {{task.getDescription}}
         <h4>Add a task</h4>
 
         <form action="/tasks" method="post">
@@ -22,6 +23,9 @@
 
             <label for="description">Task Description</label>
             <input type="text" name="description" id="description">
+
+            <label for="due_date">Due Date(YYYY-MM-DD):</label>
+            <input id="due_date" name="due_date" type="text">
 
             <button type="submit">Add task</button>
         </form>
